crates/sui-graphql-macros/tests/compile/graphql_query_invalid_syntax.stderr
error: GraphQL [line 1, col 24]: syntax error: expected R_CURLY, got EOF
 --> tests/compile/graphql_query_invalid_syntax.rs:5:17
  |
5 | const Q: &str = graphql_query!("query { chainIdentifier");
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `graphql_query` (in Nightly builds, run with -Z macro-backtrace for more info)
